# ms-cloudskills-rust-2023

./: README.md
03-create-first-rust-program/build-car/src/: main.rs
04-test-conditions/build-car-ex1/src/: main.rs
04-test-conditions/build-car-ex2/: Cargo.toml
04-test-conditions/build-car-ex2/src/: main.rs
05-use-loops/build-car-ex1/src/: main.rs
05-use-loops/build-car-ex2/: Cargo.toml
05-use-loops/build-car-ex2/src/: main.rs
06-handle-errors/file-ex2/src/: main.rs
06-handle-errors/person-ex1/src/: main.rs
07-understand-memory/copy/src/: main.rs
08-generics-traits/container/src/: main.rs
08-generics-traits/groups/src/: main.rs
09-explore-modules/text-processor/: Cargo.toml
09-explore-modules/text-processor/src/: main.rs
10-write-tests/div-sub/: Cargo.toml
10-write-tests/is-even/src/: main.rs
10-write-tests/rusty_pizza/src/: lib.rs
10-write-tests/rusty_pizza/tests/: pizzas.rs
11-build-program/rusty-journal/: Cargo.toml  README.md  test-journal.json
11-build-program/rusty-journal/src/: cli.rs  main.rs  tasks.rs
