[package]
name = "rusty-journal"
version = "0.1.0"
rust-version = "1.67"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.*", features = ["cargo", "derive"] }
chrono = { version = "0.4.*", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0" }
home = { version = "0.5.*" }
anyhow = { version = "1.0.*" }
